--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,4 +1,4 @@
 production:
-  google_access_key: "ghg3uh45kj3h45jk3h5kj3h"
-  google_secret_key: "j3h45kjh34j5h3h5j3h53h5"
-  google_bucket: "images"
+  GOOGLE_ACCESS_KEY: "ghg3uh45kj3h45jk3h5kj3h"
+  GOOGLE_SECRET_KEY: "j3h45kjh34j5h3h5j3h53h5"
+  GOOGLE_BUCKET: "images"
